test/types/records/split-init/split-init-out-formal-never-set.chpl
proc genericOut(out arg) {
}

proc main() {
  var x: int;

  genericOut(x);
}
